# azure-blob-storage-sample

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  docker-compose.yml  secrets.template.cfg
.devcontainer/: devcontainer.json
.github/workflows/: create_release.yml  pull_request.yml
devops/docker-compose/bash/: Dockerfile  download-file-to-azure-storage-account-container.sh  upload-file-to-azure-storage-account-container.sh
devops/docker-compose/python/: Dockerfile  upload-file-to-az-storage-account-container.py
devops/terraform/: locals.tf  main.tf  output.tf  variables.tf
modules/: lib.rs
modules/azure_connectors/: azure_blob_handler.rs
modules/connectors/: azure_blob_handler.rs  blob_connector.rs
output/: .gitignore
scripts/bash/: Dockerfile  sample.txt
scripts/python/: Dockerfile  python-sample.txt
src/: main.rs
templates/: secrets.template.cfg
terraform/: locals.tf  variables.tf
test/: test_azure_blob_handler.rs
