[package]
name = "azure_blob_storage_sample"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "common_modules"
path = "modules/lib.rs"

[[test]]
name = "test_azure_blob_handler"
path = "test/test_azure_blob_handler.rs"

[dependencies]
azure_core = "0.16.0"
azure_storage = "0.16.0"
azure_storage_blobs = "0.16.0"
futures = "0.3"
tokio = { version = "1", features = ["full"] }
bytes = "1.0"
dotenv = "0.15.0"
log = "0.4.20"
env_logger = "0.10.0"
clap = { version = "4.4.7", features = ["derive"] }
colored = "2.0.4"